--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Blinker&family=Bruno+Ace&family=DM+Sans:opsz,wght@9..40,300&family=Poppins:wght@300&family=Space+Grotesk&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Blinker&family=Bruno+Ace&family=DM+Sans:opsz,wght@9..40,300&family=Fira+Sans&family=Poppins:wght@300&family=Space+Grotesk&display=swap" rel="stylesheet">
     <!-- Add your custom CSS links here if needed -->
 
     <!-- Material Symbols Outlined font from Google Fonts -->
