--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Blinker&family=Bruno+Ace&family=DM+Sans:opsz,wght@9..40,300&family=Fira+Sans:ital,wght@0,400;1,300&family=Poppins:wght@300&family=Roboto+Condensed&family=Space+Grotesk&display=swap" rel="stylesheet">
     <!-- Add your custom CSS links here if needed -->
 
     <!-- Material Symbols Outlined font from Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <style>
-        .material-symbols-outlined {
-            font-variation-settings:
-                'FILL' 0,
-                'wght' 400,
-                'GRAD' 0,
-                'opsz' 24;
-        }
-    </style>
+
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
