--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
     <!-- Place your JavaScript scripts at the end of the body for better page load performance -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Add your custom JavaScript scripts here if needed -->
 </body>
