--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Blinker&family=Bruno+Ace&family=DM+Sans:opsz,wght@9..40,300&family=Fira+Sans:ital,wght@0,400;1,300&family=Poppins:wght@300&family=Roboto+Condensed&family=Space+Grotesk&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
     <!-- Add your custom CSS links here if needed -->
 
     <!-- Material Symbols Outlined font from Google Fonts -->
